[gd_scene load_steps=4 format=3 uid="uid://dr07idld7ysiw"]

[ext_resource type="Script" uid="uid://bktm70pk0xe7g" path="res://src/ui/ingame/dynamic/hotbar/hotbar_slot.gd" id="1_sxpqk"]

[sub_resource type="CanvasItemMaterial" id="CanvasItemMaterial_iytsm"]
light_mode = 1

[sub_resource type="LabelSettings" id="LabelSettings_sbp68"]
font_size = 8

[node name="HotbarSlot" type="Control"]
layout_mode = 3
anchors_preset = 0
script = ExtResource("1_sxpqk")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 0
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0

[node name="ItemIcon" type="TextureRect" parent="MarginContainer"]
material = SubResource("CanvasItemMaterial_iytsm")
layout_mode = 2
expand_mode = 1
stretch_mode = 5
metadata/_edit_use_anchors_ = true

[node name="SlotNumberLabel" type="Label" parent="MarginContainer"]
layout_mode = 2
size_flags_vertical = 1
text = "1."
label_settings = SubResource("LabelSettings_sbp68")

[node name="EquippedLabel" type="Label" parent="MarginContainer"]
visible = false
layout_mode = 2
size_flags_vertical = 1
text = "Equipped"
label_settings = SubResource("LabelSettings_sbp68")
horizontal_alignment = 1
vertical_alignment = 2
